[package]
name = "backyard"
version = "0.1.0"
edition = "2021"
# build = "build.rs" # 在编译项目前先执行 build.rs，主要用于代码生成
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.27.1" # 来自 crates.io
# rand = { git = "https://github.com/rust-lang-nursery/rand" } # 来自网上的仓库
# bar = { path = "../bar" } # 来自本地文件系统的路径